support bilibili another sub link

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -9,7 +9,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.bilibili.com/video/*"],
+      "matches": ["*://*.bilibili.com/video/*", "*://*.bilibili.com/bangumi/play/*"],
       "js": ["content.js"]
     }
   ],
