--- a/python_server/Dockerfile
+++ b/python_server/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.11-alpine
 
 RUN pip install aiohttp flask jinja2 aiohttp_jinja2 websockets
-RUN pip install keyboard
+RUN pip install keyboard pillow qrcode
 
 WORKDIR /app
 
